# ExchangeClientServer

./: CMakeLists.txt  README.md  precompiled.hpp
client/: client.cpp  client.hpp  main.cpp  packet.cpp  packet.hpp
client/packets/: exchange.cpp  exchange.hpp  login.cpp  login.hpp  wallet.cpp  wallet.hpp
core/: common.hpp
server/: core.cpp  core.hpp  main.cpp  server.cpp  server.hpp  session.cpp  session.hpp
server/modules/: exchange.cpp  exchange.hpp  login.cpp  login.hpp  wallet.cpp  wallet.hpp
tests/: exchange_test.cpp
